# Blockchain-Based-Audit-Trail

./: .env.example  Discussion_Log.md  Fy_Project Discussion_Log.md  README.md  RunReadme.md  main_verification_pipeline.py  requirements.txt  train_all_models.py
audit_system/: __init__.py  bias_detector.py  compliance_checker.py  consensus_engine.py  fairness_postprocessor.py  logger.py  privacy_verifier.py  utility_verifier.py
blockchain/api/: blockchain_client.py  verification_orchestrator.py
blockchain/chaincode/rust/: Cargo.toml
blockchain/chaincode/rust/src/: lib.rs
blockchain/network/: configtx.yaml  crypto-config.yaml  docker-compose.yaml  setup_network.sh
dashboard/: app.py
dashboard/templates/: index.html
data/synthetic/: synthetic_adult.csv
docs/: Discussion_Log.md  Gantt_Chart_and_DFD.txt  Project_Methodology.txt  SDLC_Model.txt  UML_Diagrams.txt  api_documentation.md  blockchain_documentation.md  setup_guide.md
docs/research_paper/: main.tex  references.bib
experiments/: __init__.py  ablation_study.py  comparative_study.py  scalability_test.py
ml_models/evaluators/: __init__.py  metrics.py
ml_models/generators/: CTGAN_Insurance.ipynb  auditable_ctgan.py  vae_generator.py
results/: cached_ctgan_adult.pkl  cached_ctgan_model.pkl  pipeline_output.txt
results/experiments/: comparative_study_details.csv  comparative_study_results.json  scalability_dataset_size.csv  scalability_summary.json  scalability_verifiers.csv
results/reports/: audit_trail_20251217_065852.json  (+12 more)
tests/: test_compliance.py  test_integration.py
(+10 files in other folders)
